z-index error fix

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -55,7 +55,7 @@
     @apply bg-white shadow-md rounded-sm w-[300px] hover:w-[320px] p-5 transition-all duration-300 ease-in-out;
  }
  .card {
-    @apply bg-white shadow-md rounded-sm w-[250px] hover:w-[260px] p-5 transition-all duration-300 ease-in-out;
+    @apply bg-white shadow-md rounded-sm w-[250px] hover:w-[260px] z-0 p-5 transition-all duration-300 ease-in-out;
  }
 .logo {
     font-family: 'Quicksand', sans-serif ;
